--- a/ProgChrono/app/src/main/res/layout/activity_main.xml
+++ b/ProgChrono/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,11 @@
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:ems="10"/>
+       <ImageButton
+              android:id="@+id/firstPlus"
+              android:src="@drawable/icone_plus"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"/>
     </LinearLayout>
     <LinearLayout
             android:layout_width="fill_parent"
