--- a/ProgChrono/app/src/main/res/layout/activity_main.xml
+++ b/ProgChrono/app/src/main/res/layout/activity_main.xml
@@ -3,8 +3,11 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
-              android:orientation="vertical">
-    <LinearLayout
+              android:orientation="vertical"
+              android:id="@+id/mainLayout">
+
+    <include layout="@layout/serieslayout"/>
+  <!--  <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -40,7 +43,7 @@
               android:src="@drawable/icone_plus"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
-    </LinearLayout>
+    </LinearLayout> -->
     <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
