--- a/ProgChrono/app/src/main/res/layout/newserielayout.xml
+++ b/ProgChrono/app/src/main/res/layout/newserielayout.xml
@@ -35,7 +35,7 @@
             android:ems="10"/>
     <ImageButton
             android:id="@+id/firstPlus"
-            android:src="@drawable/icone_plus"
+            android:src="@drawable/icone_minus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 </LinearLayout>
