--- a/ProgChrono/app/src/main/res/layout/activity_main.xml
+++ b/ProgChrono/app/src/main/res/layout/activity_main.xml
@@ -4,51 +4,33 @@
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:orientation="vertical"
-              android:id="@+id/mainLayout">
-
-    <include layout="@layout/serieslayout"/>
-  <!--  <LinearLayout
-            android:layout_width="fill_parent"
+              android:id="@+id/mainLayout"
+              android:scrollbars="vertical">
+    <ScrollView android:id="@+id/seriescrollview"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center">
-        <EditText
-                android:id="@+id/numberUnit"
-                android:layout_width="67dp"
-                android:layout_height="wrap_content"
-                android:inputType="numberSigned"
-                android:ems="10"
-                android:layout_gravity="right"/>
-        <Spinner
-                android:id="@+id/dropDownTimeUnitSymbol"
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:entries="@array/timeUnitSymbol"
-                android:prompt="@string/time_unit_prompt"/>
-        <TextView
-                android:id="@+id/times"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="times :"
-                android:layout_gravity="center_horizontal"/>
-        <EditText
-                android:id="@+id/timesValue"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:inputType="number"
-                android:ems="10"/>
-       <ImageButton
-              android:id="@+id/firstPlus"
-              android:src="@drawable/icone_plus"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"/>
-    </LinearLayout> -->
+            android:layout_gravity="center">
+        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                      android:id="@+id/seriesandchronolayout"
+                      android:layout_width="fill_parent"
+                      android:layout_height="wrap_content"
+                      android:orientation="vertical"
+                      android:columnCount="1"
+                      android:gravity="center">
+       <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                      android:id="@+id/seriesmainlayout"
+                      android:layout_width="fill_parent"
+                      android:layout_height="wrap_content"
+                      android:orientation="vertical"
+                      android:gravity="center">
+            <include layout="@layout/serieslayout"/>
+        </LinearLayout>
+
     <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:gravity="center">
+            android:gravity="center_vertical|center_horizontal">
         <Button
                 android:text="INIT"
                 android:id="@+id/init_button"
@@ -86,7 +68,8 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center"
-            android:layout_marginLeft="200dp"
-            >
+            android:layout_marginLeft="200dp">
     </LinearLayout>
+    </GridLayout>
+    </ScrollView>
 </LinearLayout>
