--- a/ProgChrono/app/src/main/res/layout/newserielayout.xml
+++ b/ProgChrono/app/src/main/res/layout/newserielayout.xml
@@ -37,5 +37,6 @@
             android:id="@+id/firstPlus"
             android:src="@drawable/icone_minus"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:onClick="removeSerie"/>
 </LinearLayout>
